    file before continuing, rather than stomping on valid configuration values.

  * Use new config_file.{h,cc} to improve config file management
    (Closes: #504152, #502617, #442937, #407284)

  * When becoming root with 'su', pass along "--login" (Closes: #190784)

  * Return an error if adding/removing tags without "root" (Closes: #725272)

- User visible changes:

  * [cmdline] Minor improvements to help (Closes: #497136)

  * [curses] Show Origin and URI in pkg info screen
    (Closes: #294040, #457794, #513622, #611515)

  * Print useful message when package lists are out of date (Closes: #758764)

  * [curses] Allow to hide bottom half in several screens (Closes: #453853)

  * [cmdline] Hide Show-Why reasons when the string is empty (Closes: #576584)

  * [curses] Show hostname on header line (Closes: #398101)

- Internal changes:

  * Change APT::Changelogs::Server (src/apt_options.cc) from
    http://packages.debian.org/changelogs to
    http://metadata.ftp-master.debian.org/changelogs -- it is the default for a
    few years already.

  * Add function to get the URI of a package version

  * Add function to get the Origin of a package version

  * Add function to get the candidate version of a package

  * Use Boost::Filesystem for some file-related operations

    C++ Filesystem TS is derived from it not approved yet, and the support from
    compilers is not great.  When support is good, the switch should be almost
    automatic.

  * Add generic/apt/config_file.{h,cc} to help manage config file

- Documentation:

  * manpage:

    * Separate two elements in --add-user-tag-to description with comma, they
      were displayed together


[2015-10-16]
Version 0.7.4

- New features:

  * [curses] Show providers of virtual packages in "description" area
    (Closes: #103964)

    The description area (bottom half of the screen in the default view) was
    completely empty for virtual packages.  Now it shows the list of "real"