@@ -59,6 +59,8 @@ Version 0.7.5 UNRELEASED
 
   * Return an error if adding/removing tags without "root" (Closes: #725272)
 
+  * Use XDG_CACHE_HOME spec instead of ~/.aptitude/cache (Closes: #671780)
+
 - User visible changes:
 
   * [cmdline] Minor improvements to help (Closes: #497136)
